--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     終了時間: <span id="finsh_time"></span><br>
                     ゲームID: <span id="gameid"></span><br>
                     衝突物体: <span id="hit_object"></span><br>
-                    衝突した時間: <span id="hit_time"></span><br>
+                    終了した時間: <span id="hit_time"></span><br>
                     免許の有無: <span id="license"></span><br>
                     プレイヤーID: <span id="playerid"></span><br>
                     走行パターン: <span id="run_pattern"></span><br>
